# GenesisBlock

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FRAMEWORK_MASTER_SPEC.md  FRAMEWORK_MASTER_SPEC_v1.6.0.md  GEMINI.md  GenesisBlock.md  INCIDENT_REPORT--ANTIGRAVITY-AGENT-FAIL.md  INCIDENT_REPORT--ANTIGRAVITY-GIT-CONFIG-CONFLICT.md  README.md  ROADMAP.md  WHITEPAPER--GENESIS-KNOWLEDGE-SYSTEM.md  atom_registry.yaml  atom_schema.yaml  cleanup_src.py  codev_dashboard.html  debug_val.txt  fix_blueprints.cjs  full_validation_report.txt  generated_docs.txt  hql.pest  index.d.ts  index.js  lib_context.txt  msp_infra_startup_architecture.md  msp_spec.md  package-lock.json  package.json  qwen.md  tmp_body_SPEC--GENESISDB-FFI-CONTRACT.md  tsconfig.json  update_consensus.py  validate_full.txt  validate_out.json  validate_output.txt  validate_output_merged.txt  (+4 more)
.codex/: config.toml
.github/: pull_request_template.md
__test__/: mcp.test.mjs
audit/: policy-decisions.jsonl
benches/: hql_query_stress.rs  industrial_audit.rs  ldbc_lite.rs  scientific_audit.rs  shadow_sync_stress.rs  snb_bulk_ingestion.rs  snb_ingestion.rs
data/: benchmarks.json
docs/: API_REFERENCE.md  AUDIT--P10-CONCURRENCY-REPORT.md  AUDIT--P11-INDUSTRIAL-STRESS-TEST.md  AUDIT--P12-INTERIOR-MUTABILITY-REPORT.md  AUDIT--P12-SCIENTIFIC-VERIFICATION-REPORT.md  AUDIT--P13-GROUP-COMMIT-REPORT.md  AUDIT--P7-PERFORMANCE-REPORT.md  AUDIT--P8-FULL-SCALE-STRESS-TEST.md  AUDIT--P8-SNB-INGESTION-REPORT.md  AUDIT--P9-TURBO-CORE-PERFORMANCE.md  Complexity-Based.md  DESIGN--TRANSITIVE-INFERENCE.md  EXPANSION-SPEC--GENESIS-DB.md  FLOW--GENESIS-BLOCK-DATAFLOW.md  FLOW--GENESIS-BLOCK-WORKFLOW.md  (+31 more)
(+610 files in other folders)
