[package]
name = "genesis-block-native"
version = "0.0.1"
edition = "2021"
description = "Genesis Block — high-performance hybrid semantic-graph engine"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
regex = "1"
dashmap = "6.0"
once_cell = "1.19"
parking_lot = "0.12"
sysinfo = "0.30"
bincode = "1.3"
hnsw_rs = "0.3.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.4.0"
rayon = "1.12.0"
twox-hash = "2.1.2"
rand = "0.8"

[build-dependencies]
napi-build = "2.1"

[[bin]]
name = "genesis-db-server"
path = "src/main.rs"

[[bench]]
name = "ldbc_lite"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dev-dependencies]
anyhow = "1.0.102"
criterion = "0.8.2"
rand = "0.10.1"
tempfile = "3.27.0"

[[bin]]
name = "snb-ingestion"
path = "benches/snb_ingestion.rs"


[[bin]]
name = "snb-bulk-ingestion"
path = "benches/snb_bulk_ingestion.rs"


[[bin]]
name = "hql-query-stress"
path = "benches/hql_query_stress.rs"


[[bin]]
name = "industrial-audit"
path = "benches/industrial_audit.rs"


[[bin]]
name = "scientific-audit"
path = "benches/scientific_audit.rs"

